[e5d3080dce95e5c94cb40ef1d98f6a4479f313ca]: Merge pull request #156 from DeveloperCielo/tsaitobraspag-patch-93
Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -1045,14 +1045,14 @@ Below we specify any existing differences:</p>
       <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Used</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Used</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
       <td><strong>First</strong> if the credentials have been stored and they will be used for the first time.<br /><strong>Used</strong> if the credentials have been stored and they were previously used.</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Reason</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
@@ -1672,14 +1672,14 @@ Below we specify any existing differences:</p>
       <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Used</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Used</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
       <td><strong>First</strong> if the credentials have been stored and they will be used for the first time.<br /><strong>Used</strong> if the credentials have been stored and they were previously used.</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Reason</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
@@ -2115,14 +2115,14 @@ Below we specify any existing differences:</p>
       <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Used</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Used</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
       <td><strong>First</strong> if the credentials have been stored and they will be used for the first time.<br /><strong>Used</strong> if the credentials have been stored and they were previously used.</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Reason</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
@@ -2835,14 +2835,14 @@ Below we specify any existing differences:</p>
       <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Used</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Used</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
       <td><strong>First</strong> if the credentials have been stored and they will be used for the first time.<br /><strong>Used</strong> if the credentials have been stored and they were previously used.</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Reason</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
