[bd77be3e3c5f4a4789d7eb7c4504297443c66c8c]: Merge pull request #157 from DeveloperCielo/tsaitobraspag-patch-94
Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -1045,7 +1045,7 @@ Below we specify any existing differences:</p>
       <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Used</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
@@ -1055,8 +1055,8 @@ Below we specify any existing differences:</p>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
       <td>Text</td>
       <td>-</td>
-      <td>No</td>
-      <td>Indicates the purpose of credential storage.<br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
+      <td>Conditional</td>
+      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
     </tr>
   </tbody>
 </table>
@@ -1672,7 +1672,7 @@ Below we specify any existing differences:</p>
       <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Used</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
@@ -1682,8 +1682,8 @@ Below we specify any existing differences:</p>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
       <td>Text</td>
       <td>-</td>
-      <td>No</td>
-      <td>Indicates the purpose of credential storage.<br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
+      <td>Conditional</td>
+      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
     </tr>
   </tbody>
 </table>
@@ -2115,7 +2115,7 @@ Below we specify any existing differences:</p>
       <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Used</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
@@ -2125,8 +2125,8 @@ Below we specify any existing differences:</p>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
       <td>Text</td>
       <td>-</td>
-      <td>No</td>
-      <td>Indicates the purpose of credential storage.<br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
+      <td>Conditional</td>
+      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
     </tr>
   </tbody>
 </table>
@@ -2835,7 +2835,7 @@ Below we specify any existing differences:</p>
       <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Used</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
       <td>Text</td>
       <td>-</td>
       <td>No</td>
@@ -2845,8 +2845,8 @@ Below we specify any existing differences:</p>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
       <td>Text</td>
       <td>-</td>
-      <td>No</td>
-      <td>Indicates the purpose of credential storage.<br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
+      <td>Conditional</td>
+      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Provider</code></td>
