[f186a115753549a497bdfc080479b89f7e834ba1]: Update 2000-01-01-checkout-cielo.md

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -2326,7 +2326,7 @@ Essa modalidade de notificação é baseada em um <code class="highlighter-rouge
     </span><span class="s2">"amount"</span><span class="p">:</span><span class="w"> </span><span class="mi">101</span><span class="p">,</span><span class="w">
     </span><span class="s2">"discount_amount"</span><span class="p">:</span><span class="w"> </span><span class="mi">0</span><span class="p">,</span><span class="w">
     </span><span class="s2">"checkout_cielo_order_number"</span><span class="p">:</span><span class="w"> </span><span class="s2">"65930e7460bd4a849502ed14d7be6c03"</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"created_date"</span><span class="p">:</span><span class="w"> </span><span class="s2">"12/09/2017 14:38:56"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"created_date"</span><span class="p">:</span><span class="w"> </span><span class="s2">"12-09-2017 14:38:56"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"customer_name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Test Test"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"customer_phone"</span><span class="p">:</span><span class="w"> </span><span class="s2">"21987654321"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"customer_identity"</span><span class="p">:</span><span class="w"> </span><span class="s2">"84261300206"</span><span class="p">,</span><span class="w">
