[20b0e3c7b33b8a9be91e03cdcef34eba3634dbcb]: Merge pull request #158 from DeveloperCielo/tsaitobraspag-patch-95
Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -802,7 +802,7 @@ Abaixo especificamos qualquer diferença existente:</p>
          </span><span class="s2">"SecurityCode"</span><span class="p">:</span><span class="s2">"123"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"Brand"</span><span class="p">:</span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
+            </span><span class="s2">"Usage"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"Unscheduled"</span><span class="w">
          </span><span class="p">}</span><span class="w">
      </span><span class="p">}</span><span class="w">
@@ -834,7 +834,7 @@ Abaixo especificamos qualquer diferença existente:</p>
          <span class="s2">"SecurityCode"</span>:<span class="s2">"123"</span>,
          <span class="s2">"Brand"</span>:<span class="s2">"Visa"</span>,
          <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
-            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
+            <span class="s2">"Usage"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"Unscheduled"</span>
          <span class="o">}</span>
      <span class="o">}</span>
@@ -953,7 +953,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usege</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
@@ -989,7 +989,7 @@ Abaixo especificamos qualquer diferença existente:</p>
             </span><span class="s2">"SaveCard"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Brand"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
+            </span><span class="s2">"Usage"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"Unscheduled"</span><span class="w">
          </span><span class="p">}</span><span class="w">
         </span><span class="p">},</span><span class="w">
@@ -1047,7 +1047,7 @@ Abaixo especificamos qualquer diferença existente:</p>
             <span class="s2">"SaveCard"</span>: <span class="nb">false</span>,
             <span class="s2">"Brand"</span>: <span class="s2">"Visa"</span>,
          <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
-            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
+            <span class="s2">"Usage"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"Unscheduled"</span>
          <span class="o">}</span>
         <span class="o">}</span>,
@@ -1213,7 +1213,7 @@ Abaixo especificamos qualquer diferença existente:</p>
          </span><span class="s2">"SaveCard"</span><span class="p">:</span><span class="s2">"false"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"Brand"</span><span class="p">:</span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
+            </span><span class="s2">"Usage"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"Unscheduled"</span><span class="w">
          </span><span class="p">}</span><span class="w">
      </span><span class="p">}</span><span class="w">
@@ -1272,7 +1272,7 @@ Abaixo especificamos qualquer diferença existente:</p>
          <span class="s2">"SaveCard"</span>:<span class="s2">"false"</span>,
          <span class="s2">"Brand"</span>:<span class="s2">"Visa"</span>,
          <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
-            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
+            <span class="s2">"Usage"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"Unscheduled"</span>
          <span class="o">}</span>
      <span class="o">}</span>
@@ -1580,7 +1580,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usege</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
@@ -1638,7 +1638,7 @@ Abaixo especificamos qualquer diferença existente:</p>
             </span><span class="s2">"SaveCard"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Brand"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
+            </span><span class="s2">"Usage"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"Unscheduled"</span><span class="w">
          </span><span class="p">}</span><span class="w">
         </span><span class="p">},</span><span class="w">
@@ -1714,7 +1714,7 @@ Abaixo especificamos qualquer diferença existente:</p>
             <span class="s2">"SaveCard"</span>: <span class="nb">false</span>,
             <span class="s2">"Brand"</span>: <span class="s2">"Visa"</span>,
          <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
-            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
+            <span class="s2">"Usage"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"Unscheduled"</span>
          <span class="o">}</span>
         <span class="o">}</span>,
@@ -1856,7 +1856,7 @@ Abaixo especificamos qualquer diferença existente:</p>
             </span><span class="s2">"SecurityCode"</span><span class="p">:</span><span class="s2">"123"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Brand"</span><span class="p">:</span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
+            </span><span class="s2">"Usage"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"Unscheduled"</span><span class="w">
          </span><span class="p">}</span><span class="w">
         </span><span class="p">}</span><span class="w">
@@ -1890,7 +1890,7 @@ Abaixo especificamos qualquer diferença existente:</p>
          <span class="s2">"SecurityCode"</span>:<span class="s2">"123"</span>,
          <span class="s2">"Brand"</span>:<span class="s2">"Visa"</span>,
          <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
-            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
+            <span class="s2">"Usage"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"Unscheduled"</span>
          <span class="o">}</span>
       <span class="o">}</span>
@@ -2023,7 +2023,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usege</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
@@ -2062,7 +2062,7 @@ Abaixo especificamos qualquer diferença existente:</p>
             </span><span class="s2">"SaveCard"</span><span class="p">:</span><span class="kc">false</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Brand"</span><span class="p">:</span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
+            </span><span class="s2">"Usage"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"Unscheduled"</span><span class="w">
          </span><span class="p">}</span><span class="w">
         </span><span class="p">},</span><span class="w">
@@ -2113,7 +2113,7 @@ Abaixo especificamos qualquer diferença existente:</p>
             <span class="s2">"SaveCard"</span>:false,
             <span class="s2">"Brand"</span>:<span class="s2">"Visa"</span>,
          <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
-            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
+            <span class="s2">"Usage"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"Unscheduled"</span>
          <span class="o">}</span>
         <span class="o">}</span>,
