[f63b8fde413b071754b5350d63544403bd11b3fc]: Merge pull request #160 from DeveloperCielo/tsaitobraspag-patch-97
Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -963,7 +963,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
       <td>Texto</td>
       <td>-</td>
-      <td>Não</td>
+      <td>Condicional</td>
       <td>Indica o propósito de armazenamento de cartões, caso o campo “Usage” for “Used”.<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>Unscheduled</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
     </tr>
   </tbody>
@@ -1590,7 +1590,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
       <td>Texto</td>
       <td>-</td>
-      <td>Não</td>
+      <td>Condicional</td>
       <td>Indica o propósito de armazenamento de cartões, caso o campo “Usage” for “Used”.<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>Unscheduled</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
     </tr>
   </tbody>
@@ -2033,7 +2033,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
       <td>Texto</td>
       <td>-</td>
-      <td>Não</td>
+      <td>Condicional</td>
       <td>Indica o propósito de armazenamento de cartões, caso o campo “Usage” for “Used”.<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>Unscheduled</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
     </tr>
   </tbody>
